--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_HOME_DIRECTORY $ENV{USERPROFILE})
 set(CMAKE_CURRENT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
 set($ENV{HOME} CMAKE_HOME_DIRECTORY)
 
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_SOURCE_DIR $ENV{USERPROFILE}/pone)
